--- a/html-and-css/tutorial3/assignment.css
+++ b/html-and-css/tutorial3/assignment.css
@@ -79,8 +79,9 @@ footer{
 }
 .child{
     background-color: black;
-    padding: 1.5em;
-    margin: 1px;
+    padding: 0.4em;
+    margin-top: 30px;
+    margin-left: 5px;
 }
 body {
     width: 100%;
@@ -100,4 +101,10 @@ a:hover{
 }
 a:visited{
     color: white;
+}
+.logo{
+    position: relative;
+    float: left;
+    text-align: left;
+    margin: 0px 10px 0px 0px;
 }
