--- a/html-and-css/tutorial8/style1.css
+++ b/html-and-css/tutorial8/style1.css
@@ -8,8 +8,8 @@ html,body{
     border-image: url(./wallpaper.jpg) 30 round;
     border-style: solid;
     border-width: 4em;
-    
-    
+    text-align: justify;
+    transform: rotate(35deg);
 }
 body{
     background-color: lightpink;
