--- a/html-and-css/Exercise/style.css
+++ b/html-and-css/Exercise/style.css
@@ -96,8 +96,9 @@ h3{
 .section{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     float: left;
+    position: relative;
     width: 49.4%;
     height: 500px;
     margin: 0;
