--- a/html-and-css/Bootstrap/tutorial2/style.css
+++ b/html-and-css/Bootstrap/tutorial2/style.css
@@ -1,5 +1,5 @@
 ul > li:hover{
-    background-color: palevioletred;
+    background-color: palevioletred !important;
     color: green;
     padding: 10px;
 }
