--- a/html-and-css/Bootstrap/tutorial5/style.css
+++ b/html-and-css/Bootstrap/tutorial5/style.css
@@ -13,3 +13,7 @@ input[type="email"] {
 #legend{
     text-align: center;
 }
+body{
+    background-image: url('https://cdn.pixabay.com/photo/2017/02/08/17/24/fantasy-2049567__480.jpg');
+    background-size: cover;
+}
