--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -1,143 +1,195 @@
-*{
-    margin: 0;
+* {
     padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-.background-image{
-    position:absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 350px;
-    z-index: -1;
 
-}
-body{
-    font-family: 'Josefin Sans' , sans-serif;
-    background-color: black;
+body {
+    font-family: 'Josefin Sans', sans-serif;
+    background-color: hsl(235, 21%, 11%);
     font-size: 18px;
     display: flex;
     justify-content: center;
 }
+
+.background-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    max-height: 350px;
+    z-index: -1;
+}
+
 .background-image img {
     width: 100%;
-    height: 100%;
     object-fit: cover;
+    min-height: 350px;
     object-position: left;
 }
-.container{
+
+.container {
     width: 100%;
     max-width: 700px;
-    margin: 0 30px;
+    margin: 0px 30px;
     margin-top: 100px;
-    
 }
-.header{
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.title{
+
+.title {
     color: white;
+    letter-spacing: 10px;
     font-size: 50px;
     font-weight: bold;
-    letter-spacing: 10px;
 }
-.new-todo{
-    background-color: hsl(235, 24%, 19%);
+
+.new-todo {
+    width: 100%;
     height: 70px;
+    background-color: hsl(235, 24%, 19%);
     margin-top: 50px;
     border-radius: 6px;
     display: flex;
 }
+
+
+
 .check{
+    flex-basis: 90px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 70px;
 }
-.check-mark{
+
+.check-mark {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     border: 2px solid hsl(237, 14%, 26%);
-    cursor: pointer;
     transition: all 0.25s;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.check-mark:hover{
-    background-color:cyan;
+
+.check-mark img {
+    visibility: hidden;
 }
-.new-todo-input{
+
+.check-mark.checked img, .check-mark:hover img {
+    visibility: visible;
+}
+
+.check-mark:hover {
+    border-color: linear-gradient(135deg, #55DDFF 0%, #C058F3 100%);
+    background: linear-gradient(135deg, #55DDFF 0%, #C058F3 100%);   
+}
+
+.check-mark.checked {
+    background-color: pink;
+    background: linear-gradient(135deg, #55DDFF 0%, #C058F3 100%);   
+}
+
+.todo-text.checked {
+    text-decoration: line-through;
+    color: hsl(233, 14%, 35%);
+}
+
+.new-todo-input {
     flex-grow: 1;
     display: flex;
     align-items: center;
 }
-.new-todo-input form {
-    flex-grow: 1;
-}
-.new-todo-input input{
+
+.new-todo-input input {
     width: 100%;
     padding: 10px 0px;
-    background-color: transparent;
-    outline: none;
-    border:none;
     font-size: 18px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    color: hsl(234, 39%, 85%);
 }
-.new-todo-input input::placeholder{
+
+.new-todo-input form {
+    flex-grow: 1;
+    display: flex;
+}
+
+.new-todo-input input::placeholder {
     color: hsl(233, 14%, 35%);
 }
-.todo-item{
-    width: 100%;
-    display: flex;
-    height: 70px;
-    background-color: hsl(235, 24%, 19%);
-    border-bottom: 1px solid hsl(235, 24%, 19%);
-    color: hsl(234, 39%, 85%);
-    font-size: 18px;
-    transform: all 0.25s ease;
-    display: flex;
-}
-.todo-item:hover{
-    transform: translateY(-2px);
-    box-shadow: 0 0px 7px 0px hsl(235, 21%, 11%);
-    border-color: hsl(235, 24%, 19%);
-}
-.todo-text{
+
+.todo-text {
     display: flex;
     align-items: center;
-
+    font-size: 18px;
+    color: hsl(234, 39%, 85%);
 }
-.todo-items-wrapper{
-    margin-top: 30px;
+
+.todo-item {
+    width: 100%;
+    height: 70px;
     background-color: hsl(235, 24%, 19%);
+    display: flex;
+    border-bottom: 1px solid hsl(237, 14%, 26%);
+    cursor: pointer;
+    transition: all .25s ease;
+    transition-property: box-shadow, transform, border-color;
+}
+
+.todo-items-wrapper {
+    margin-top: 30px;
     border-radius: 6px;
     overflow: hidden;
+    background-color: hsl(235, 24%, 19%);
     box-shadow: 0px 2px 30px 0px rgba(0,0,0,0.4);
+    margin-bottom: 30px;
 }
-.todo-items-info{
-    height: 70px;
+
+.todo-items-info {
     width: 100%;
+    height: 70px;
+    background-color: hsl(235, 24%, 19%);
+    display: flex;
+    align-items: center;
     color: hsl(233, 14%, 35%);
+    padding-left: 30px;
     display: flex;
     justify-content: space-between;
-    padding: 0px 30px;
-    align-items: center;
+    padding-right: 30px;
 }
-.items-statuses{
+
+.items-statuses {
     display: flex;
     justify-content: center;
 }
-.items-statuses span{
-    padding: 0px 5px;
+
+.items-statuses span  {
+    padding: 0 4px;
     cursor: pointer;
 }
-.items-statuses span:hover, .items-statuses span.active, .items-clear:hover {
-    color: hsl(220, 98%, 61%);
-}
-.items-clear{
+
+.items-clear {
     cursor: pointer;
     text-align: end;
+}
+
+.items-statuses span:hover, .items-clear:hover {
+    color: hsl(220, 98%, 61%);
+}
+
+.items-statuses .active  {
+    color: hsl(220, 98%, 61%);
+}
+
+.todo-item:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 0px 7px 0px hsl(235, 21%, 11%);
+    border-color: hsl(235, 24%, 19%);
 }
