--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -6,7 +6,7 @@
 
 body {
     font-family: 'Josefin Sans', sans-serif;
-    background-color: hsl(235, 21%, 11%);
+    background-color: darkred;
     font-size: 18px;
     display: flex;
     justify-content: center;
@@ -85,9 +85,18 @@ body {
     visibility: visible;
 }
 
-.check-mark:hover {
-    border-color: linear-gradient(135deg, #55DDFF 0%, #C058F3 100%);
+.check-mark:hover img, .check-mark.checked img {
+    visibility: visible;
+
+}
+.check-mark:hover, .check-mark.checked {
     background: linear-gradient(135deg, #55DDFF 0%, #C058F3 100%);   
+}
+
+.todo-text.checked{
+    text-decoration: line-through;
+    color: hsl(233, 14%, 35%);
+
 }
 
 .check-mark.checked {
