--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -18,6 +18,7 @@ body {
   left: 0;
   right: 0;
   max-height: 350px;
+  height: 300px;
   z-index: -1;
 }
 
@@ -201,4 +202,15 @@ body {
   transform: translateY(-2px);
   box-shadow: 0 0px 7px 0px hsl(235, 21%, 11%);
   border-color: hsl(235, 24%, 19%);
+}
+#spn {
+  display: flex;
+  justify-content: space-between;
+  position:absolute;
+  align-items: center;
+  color: crimson;
+  text-align: right;
+  padding-top: 25px;
+  padding-left: 600px;
+  padding-right: 50px;
 }
