--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -153,6 +153,7 @@ body {
 }
 
 .todo-items-wrapper {
+  white-space: nowrap;
   margin-top: 30px;
   border-radius: 6px;
   overflow: hidden;
@@ -206,7 +207,7 @@ body {
 #spn {
   display: flex;
   justify-content: space-between;
-  position:absolute;
+  position: absolute;
   align-items: center;
   color: crimson;
   text-align: right;
@@ -215,13 +216,18 @@ body {
   padding-right: 50px;
 }
 #bg {
-height: 300px;
+  height: 300px;
 }
-#bin{
+#bin {
   display: flex;
-  position: inherit;
   height: 60px;
   align-items: center;
   padding-top: 20px;
-  padding-left: 400px;
+  padding-right: 30px;
+}
+
+.binmarkwraper {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
 }
