--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -168,11 +168,12 @@ body {
   background-color: hsl(235, 24%, 19%);
   display: flex;
   align-items: center;
-  color: hsl(233, 14%, 35%);
+  color: white;
   padding-left: 30px;
   display: flex;
   justify-content: space-between;
   padding-right: 30px;
+  cursor: pointer;
 }
 
 .items-statuses {
