--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: "Josefin Sans", sans-serif;
-  background-color: darkslategray;
+  background-color: hsl(235, 21%, 11%);
   font-size: 18px;
   display: flex;
   justify-content: center;
@@ -168,12 +168,13 @@ body {
   background-color: hsl(235, 24%, 19%);
   display: flex;
   align-items: center;
-  color: white;
+  color: hsl(234, 39%, 85%);
   padding-left: 30px;
   display: flex;
   justify-content: space-between;
   padding-right: 30px;
   cursor: pointer;
+  font-size: 17px;
 }
 
 .items-statuses {
@@ -231,4 +232,16 @@ body {
   display: flex;
   justify-content: flex-end;
   width: 100%;
+}
+.footer{
+  display: flex;
+  position: absolute;
+  color: hsl(234, 39%, 85%);
+  white-space: nowrap;
+  text-align: center;
+  padding-top: 5px;
+  padding-left: 197px;
+  justify-content:center;
+  font-size: 15px;
+  
 }
