--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -211,7 +211,6 @@ body {
   justify-content: space-between;
   position: absolute;
   align-items: center;
-  color: crimson;
   text-align: right;
   padding-top: 25px;
   padding-left: 600px;
@@ -240,7 +239,8 @@ body {
   white-space: nowrap;
   text-align: center;
   padding-top: 5px;
-  padding-left: 125px;
+  padding-left: 117px;
+  padding-right: 117px;
   justify-content:center;
   font-size: 15px;
   
