--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -232,16 +232,15 @@ body {
   justify-content: flex-end;
   width: 100%;
 }
-.footer{
+.footer {
   display: flex;
   position: absolute;
-  color: hsl(234, 39%, 85%);
+  color: darkslategray;
   white-space: nowrap;
   text-align: center;
   padding-top: 5px;
   padding-left: 117px;
   padding-right: 117px;
-  justify-content:center;
+  justify-content: center;
   font-size: 15px;
-  
 }
