--- a/javascript/CHALLENGE-TODO-APP/style.css
+++ b/javascript/CHALLENGE-TODO-APP/style.css
@@ -239,6 +239,7 @@ body {
   white-space: nowrap;
   text-align: center;
   padding-top: 5px;
+  padding-bottom: 10px;
   padding-left: 117px;
   padding-right: 117px;
   justify-content: center;
